--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -150,3 +153,43 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+
+*$py.class
+*teste*
+python
+
+
+/.vscode
+.vscode
+*vscode*
+/emergency solutions
+*emergency solutions*
+launcher/
+*session*
+backend/config/config.bin
+backend/config/proxy.conf
+backend/database/app_datebase.db
+backend/database/IP.json
+teste.py
+*teste*
+/teste*
+*teste/
+*/decoded_data.json
+
+
+/external_utilities/
+*external_utilities*
+*.log
+*.pyc
+/temp/
+/__pycache__
+*__pycache__
+__pycache__/
+*.py[cod]
+doc/~$delo de negocios (exclusão).doc
+*/tri_admin_py_3_11_2
+
+*.db
+*/*.db
